# showcases

./: .gitignore
docs/: experiment1.md  experiment2.md  experiment3.md  experiment4.md  experiment5.md  experiment5_2.md  experiment5_2_results.md  experiment5_3.md  experiment5_3_card_audit.md  experiment5_3_results.md  experiment5_4.md  experiment5_4_audit.md  experiment5_4_card_audit.md  experiment5_4_determinism_probe_results.md  experiment5_4_results.md  experiment5_5.md  experiment5_5_results.md  experiment6.md  experiment6_results.md  experiment6c_partial_results.md  experiment6c_results.md  experiment_1_feedback_and_next_steps.md  experiment_2_specificity_and_transfer_plan.md  experiments_overview.md  failure_attribution_downstream_poc_agent_brief.md  failure_attribution_experiment_arc_summary.md  failure_attribution_poc_presentation_summary.md  tau2_setup_smoke_report.md  who_when_experiment_runbook.md  who_when_first_poc_strategy.md  who_when_native_utility_poc_strategy.md  who_when_phase2a_smoke_results.md  who_when_poc_report.md
reports/exp5_2_baseline_harvest_30/: condition_summary.csv  task_stability.csv
who_when_card_poc/: .env.example  .gitignore  README.md  pyproject.toml
who_when_card_poc/configs/: experiment.yaml  models.yaml
who_when_card_poc/src/ww_card_poc/: __init__.py  case_selection.py  cli.py  conditions.py  data_audit.py  exp3.py  exp4.py  experiment_config.py  generation_runner.py  judging.py  model_client.py  phase2a_inputs.py  reality_check.py  results.py  settings.py  who_when_io.py
who_when_card_poc/tests/: test_exp3_corrections.py
(+92 files in other folders)
